# lucid-engine

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
src/example/: __main__.py  shared.py
src/example/scenes/: game.py  menu.py
src/lucid/: init.py
src/lucid/asset/: __init__.py  manager.py
src/lucid/core/: __init__.py  app.py  log.py  path.py  scene.py  typing.py
src/lucid/input/: __init__.py  manager.py  mapping.py
src/lucid/models/: __init__.py
src/lucid/rendering/: __init__.py  renderer.py
src/lucid/templates/: MANIFEST.in  README.md  __main__.py  game.py  pyproject.toml  shared.py
