[project]
name = "{project}"
description = "{desc}"
version = "{version}"
readme = "README.md"
classifiers = [
    "Topic :: Games/Entertainment",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "lucid-engine",
]
requires-python = ">=3.12"

[project.scripts]
{project}_main = "{project}.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
include-package-data = true
